--- a/vue-base-example/package.json
+++ b/vue-base-example/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
