--- a/Estacionamiento UTN/package.json
+++ b/Estacionamiento UTN/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
